build/log/idf_py_stdout_output_44597
Command: ninja all
[1/11] Performing build step for 'bootloader'
[1/1] cd /Users/zhangziyu/Documents/desk_ai/build/bootloader/esp-idf/esptool_py && /Users/zhangziyu/.espressif/python_env/idf5.5_py3.13_env/bin/python /Users/zhangziyu/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/zhangziyu/Documents/desk_ai/build/bootloader/bootloader.bin
Bootloader binary size 0x5240 bytes. 0x2dc0 bytes (36%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/desk_ai.c.obj
[5/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/state.c.obj
[6/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/ui.c.obj
FAILED: [code=1] esp-idf/main/CMakeFiles/__idf_main.dir/ui.c.obj 
/Users/zhangziyu/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/zhangziyu/Documents/desk_ai/build/config -I/Users/zhangziyu/Documents/desk_ai/main -I/Users/zhangziyu/esp/esp-idf/components/newlib/platform_include -I/Users/zhangziyu/esp/esp-idf/components/freertos/config/include -I/Users/zhangziyu/esp/esp-idf/components/freertos/config/include/freertos -I/Users/zhangziyu/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/zhangziyu/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/zhangziyu/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/zhangziyu/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/zhangziyu/esp/esp-idf/components/freertos/esp_additions/include -I/Users/zhangziyu/esp/esp-idf/components/esp_hw_support/include -I/Users/zhangziyu/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/zhangziyu/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/zhangziyu/esp/esp-idf/components/esp_hw_support/dma/include -I/Users/zhangziyu/esp/esp-idf/components/esp_hw_support/ldo/include -I/Users/zhangziyu/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/zhangziyu/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/Users/zhangziyu/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/Users/zhangziyu/esp/esp-idf/components/esp_hw_support/power_supply/include -I/Users/zhangziyu/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/zhangziyu/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/Users/zhangziyu/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/Users/zhangziyu/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/Users/zhangziyu/esp/esp-idf/components/heap/include -I/Users/zhangziyu/esp/esp-idf/components/heap/tlsf -I/Users/zhangziyu/esp/esp-idf/components/log/include -I/Users/zhangziyu/esp/esp-idf/components/soc/include -I/Users/zhangziyu/esp/esp-idf/components/soc/esp32s3 -I/Users/zhangziyu/esp/esp-idf/components/soc/esp32s3/include -I/Users/zhangziyu/esp/esp-idf/components/soc/esp32s3/register -I/Users/zhangziyu/esp/esp-idf/components/hal/platform_port/include -I/Users/zhangziyu/esp/esp-idf/components/hal/esp32s3/include -I/Users/zhangziyu/esp/esp-idf/components/hal/include -I/Users/zhangziyu/esp/esp-idf/components/esp_rom/include -I/Users/zhangziyu/esp/esp-idf/components/esp_rom/esp32s3/include -I/Users/zhangziyu/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/Users/zhangziyu/esp/esp-idf/components/esp_rom/esp32s3 -I/Users/zhangziyu/esp/esp-idf/components/esp_common/include -I/Users/zhangziyu/esp/esp-idf/components/esp_system/include -I/Users/zhangziyu/esp/esp-idf/components/esp_system/port/soc -I/Users/zhangziyu/esp/esp-idf/components/esp_system/port/include/private -I/Users/zhangziyu/esp/esp-idf/components/xtensa/esp32s3/include -I/Users/zhangziyu/esp/esp-idf/components/xtensa/include -I/Users/zhangziyu/esp/esp-idf/components/xtensa/deprecated_include -I/Users/zhangziyu/esp/esp-idf/components/lwip/include -I/Users/zhangziyu/esp/esp-idf/components/lwip/include/apps -I/Users/zhangziyu/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/zhangziyu/esp/esp-idf/components/lwip/lwip/src/include -I/Users/zhangziyu/esp/esp-idf/components/lwip/port/include -I/Users/zhangziyu/esp/esp-idf/components/lwip/port/freertos/include -I/Users/zhangziyu/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/zhangziyu/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/zhangziyu/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/zhangziyu/Documents/desk_ai/managed_components/espressif__esp_lcd_st77916/include -I/Users/zhangziyu/esp/esp-idf/components/esp_lcd/include -I/Users/zhangziyu/esp/esp-idf/components/esp_lcd/interface -I/Users/zhangziyu/esp/esp-idf/components/esp_lcd/rgb/include -I/Users/zhangziyu/esp/esp-idf/components/driver/deprecated -I/Users/zhangziyu/esp/esp-idf/components/driver/i2c/include -I/Users/zhangziyu/esp/esp-idf/components/driver/touch_sensor/include -I/Users/zhangziyu/esp/esp-idf/components/driver/twai/include -I/Users/zhangziyu/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/Users/zhangziyu/esp/esp-idf/components/esp_pm/include -I/Users/zhangziyu/esp/esp-idf/components/esp_ringbuf/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_gpio/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_pcnt/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_gptimer/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_spi/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_mcpwm/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_i2s/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_sdmmc/include -I/Users/zhangziyu/esp/esp-idf/components/sdmmc/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_sdspi/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_sdio/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_dac/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_rmt/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_tsens/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_sdm/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_i2c/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_uart/include -I/Users/zhangziyu/esp/esp-idf/components/vfs/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_ledc/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_parlio/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/Users/zhangziyu/esp/esp-idf/components/esp_driver_twai/include -I/Users/zhangziyu/Documents/desk_ai/managed_components/espressif__esp_lvgl_port/include -I/Users/zhangziyu/Documents/desk_ai/managed_components/lvgl__lvgl -I/Users/zhangziyu/Documents/desk_ai/managed_components/lvgl__lvgl/src -I/Users/zhangziyu/Documents/desk_ai/managed_components -I/Users/zhangziyu/Documents/desk_ai/managed_components/lvgl__lvgl/examples -I/Users/zhangziyu/Documents/desk_ai/managed_components/lvgl__lvgl/demos -I/Users/zhangziyu/Documents/desk_ai/managed_components/espressif__esp_lcd_touch_cst816s/include -I/Users/zhangziyu/Documents/desk_ai/managed_components/espressif__esp_lcd_touch/include -I/Users/zhangziyu/esp/esp-idf/components/esp_http_client/include -I/Users/zhangziyu/esp/esp-idf/components/esp_event/include -I/Users/zhangziyu/esp/esp-idf/components/esp_wifi/include -I/Users/zhangziyu/esp/esp-idf/components/esp_wifi/include/local -I/Users/zhangziyu/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/Users/zhangziyu/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/Users/zhangziyu/esp/esp-idf/components/esp_phy/include -I/Users/zhangziyu/esp/esp-idf/components/esp_phy/esp32s3/include -I/Users/zhangziyu/esp/esp-idf/components/esp_netif/include -I/Users/zhangziyu/esp/esp-idf/components/nvs_flash/include -I/Users/zhangziyu/esp/esp-idf/components/esp_partition/include -I/Users/zhangziyu/esp/esp-idf/components/esp_timer/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/zhangziyu/Documents/desk_ai=. -fmacro-prefix-map=/Users/zhangziyu/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -DESP_LCD_ST77916_VER_MAJOR=2 -DESP_LCD_ST77916_VER_MINOR=0 -DESP_LCD_ST77916_VER_PATCH=2 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/ui.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/ui.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/ui.c.obj -c /Users/zhangziyu/Documents/desk_ai/main/ui.c
/Users/zhangziyu/Documents/desk_ai/main/ui.c: In function 'ui_init':
/Users/zhangziyu/Documents/desk_ai/main/ui.c:201:46: error: 'lv_font_montserrat_16' undeclared (first use in this function); did you mean 'lv_font_montserrat_14'?
  201 |     lv_obj_set_style_text_font(state_label, &lv_font_montserrat_16, 0);
      |                                              ^~~~~~~~~~~~~~~~~~~~~
      |                                              lv_font_montserrat_14
/Users/zhangziyu/Documents/desk_ai/main/ui.c:201:46: note: each undeclared identifier is reported only once for each function it appears in
ninja: build stopped: subcommand failed.
